Fix graphical bug on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,6 @@ input[type="number"] {
 .palette-item {
     width: 100%;
     height: 3em;
-    display: flex;
     border: none;
     outline: none;
     background: none;
@@ -243,7 +242,10 @@ input[type="number"] {
 }
 
 .color-box {
-    flex: 1;
+    /* flex: 1; */
+    height: 100%;
+    width: 25%;
+    display: inline-block;
 }
 
 #generate-button {
